--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <title>The Tea Cozy</title>
+    <link rel="stylesheet" href="styles.css" type="text/css" />
 </head>
 <body>
     <header>
@@ -19,6 +20,32 @@
             <div class="mission-text">
                 <h2>Our Mission</h2>
                 <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+            </div>
+        </div>
+        <div class="tea-month-text">
+                <h2>Tea of the Month</h2>
+                <h4>What's Steeping at The Tea Cozy?</h2>
+        </div>
+        <div class="tea-blocks">
+            <div class="tea-month-block">
+                <img src="./images/img-berryblitz.jpg" alt="Fall Berry Blitz Tea" />
+                <h4>Fall Berry Blitz Tea</h4>
+            </div>
+            <div class="tea-month-block">
+                <img src="./images/img-spiced-rum.jpg" alt="Spiced Rum Tea" />
+                <h4>Spiced Rum Tea</h4>
+            </div>
+            <div class="tea-month-block">
+                <img src="./images/img-donut.jpg" alt="Seasonal Donuts" />
+                <h4>Seasonal Donuts</h4>
+            </div>
+            <div class="tea-month-block">
+                <img src="./images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea" />
+                <h4>Myrtle Ave Tea</h4>
+            </div>
+            <div class="tea-month-block">
+                <img src="./images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea" />
+                <h4>Bedford Bizarre Tea</h4>
             </div>
         </div>
     </main>
