--- a/index.html
+++ b/index.html
@@ -48,6 +48,27 @@
                 <h4>Bedford Bizarre Tea</h4>
             </div>
         </div>
+        <h2 class="locations-text">Locations</h2>
+        <div class="locations">
+            <div class="location-block">
+                <h3>Downtown</h3>
+                <h4>384 West 4th St</h4>
+                <h4>Suite 108</h4>
+                <h4>Portland, Maine</h4>
+            </div>
+            <div class="location-block">
+                <h3>East Bayside</h3>
+                <h4>384 West 4th St</h4>
+                <h4>Suite 108</h4>
+                <h4>Portland, Maine</h4>
+            </div>
+            <div class="location-block">
+                <h3>Downtown</h3>
+                <h4>384 West 4th St</h4>
+                <h4>Suite 108</h4>
+                <h4>Portland, Maine</h4>
+            </div>
+        </div>
     </main>
     <footer>
 
