--- a/index.html
+++ b/index.html
@@ -69,8 +69,13 @@
                 <h4>Portland, Maine</h4>
             </div>
         </div>
+        <div class="contact">
+            <h2>The Tea Cozy</h2>
+            <h5>contact@theteacozy.com</h5>
+            <h5>917-555-8904</h5>
+        </div>
     </main>
     <footer>
-
+        <h4>copyright The Tea Cozy 2017</h4>
     </footer>
 </body>
