--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <title>The Tea Cozy</title>
     <link rel="stylesheet" href="styles.css" type="text/css" />
@@ -79,3 +80,4 @@
         <h4>copyright The Tea Cozy 2017</h4>
     </footer>
 </body>
+</html>
